Fix pointer alignment, to build on sparc.

gpm-brightness-xrandr.c fails to build on sparc, due to a passing a char* as
guint*, which doesn't have the right alignment. This is caught by gcc, and
result s in a build failure.

http://bugzilla.gnome.org/show_bug.cgi?id=589404